# planpro-importer

./: .gitignore  README.md  planproreader.py  pyproject.toml  setup.py
example/: example.py  forchheim.ppxml  joehstadt.ppxml
planpro_importer/: __init__.py  planproimporter.py  planproversion.py  reader.py  routereader.py  utils.py  uuidfinder.py
planpro_importer/planpro110/: __init__.py  nodereader.py  reader110.py  signalreader.py
planpro_importer/planpro19/: __init__.py  reader19.py
