[tool.poetry]
name = "planpro_importer"
version = "1.9.0"
description = ""
authors = ["Arne Boockmeyer <arne.boockmeyer@hpi.de>"]
readme = "README.md"
repository="https://github.com/simulate-digital-rail/planpro-importer"
packages = [{include = "planpro_importer"}]

[tool.poetry.dependencies]
python = "^3.10"
six = "^1.16.0"
lxml = "^4.9"
yaramo = {git = "https://github.com/simulate-digital-rail/yaramo.git"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
