[tool.poetry]
name = "planpro_importer"
version = "2.0"
description = ""
authors = ["Arne Boockmeyer <arne.boockmeyer@hpi.de>"]
readme = "README.md"
repository="https://github.com/simulate-digital-rail/planpro-importer"
packages = [{include = "planpro_importer"}]

[tool.poetry.dependencies]
python = "^3.11"
six = "^1.16.0"
lxml = "^4.9"
yaramo = {git = "https://github.com/simulate-digital-rail/yaramo", tag = "v1.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
