[tool.poetry]
name = "planpro_importer"
version = "3.0"
description = "An Importer to create yaramo topologies from PlanPro files"
authors = ["Arne Boockmeyer <arne.boockmeyer@hpi.de>"]
readme = "README.md"
repository="https://github.com/simulate-digital-rail/planpro-importer"
packages = [{include = "planpro_importer"}]

[tool.poetry.dependencies]
python = "^3.11"
six = "^1.16.0"
lxml = "^5.3.1"
yaramo = {git = "https://github.com/simulate-digital-rail/yaramo", branch = "yaramo2"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
